user-list-add new users

--- a/user-list/client/public/index.html
+++ b/user-list/client/public/index.html
@@ -10,7 +10,7 @@
       content="Web site created using create-react-app"
     />
     <script src="https://kit.fontawesome.com/3b7d954735.js" crossorigin="anonymous"></script>
-    <title><User-List></User-List></title>
+    <title>User-List</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
